--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "mocha": "9.0.3",
     "zombie": "6.1.4"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "prettier": "^2.5.1"
+  }
 }
